--- a/toc.yaml
+++ b/toc.yaml
@@ -4,7 +4,7 @@ toc:
     version: 2
     category: logging_monitoring
     audience: service
-    href: /docs/activity-tracker-cli-plugin?topic=activity-tracker-cli-plugin-activity-tracker-cli
+    href: /docs/activity-tracker-cli-plugin?topic=activity-tracker-cli-plugin-activity-tracker-cli-overview
     console-page: /observe/activitytracker
     product-page: https://www.ibm.com/cloud/activity-tracker
     path: activity-tracker-cli-plugin
@@ -14,4 +14,7 @@ toc:
   - navgroup: 
       id: reference
       topics: 
+      - activity-tracker-cli-overview.md
       - activity-tracker-cli.md
+      - atracker-cli-v1.md
+      - atracker-cli-v2.md
