--- a/toc.yaml
+++ b/toc.yaml
@@ -2,19 +2,18 @@ toc:
   properties:
     subcollection: activity-tracker-cli-plugin
     version: 2
-    category: logging_monitoring
     audience: service
     href: /docs/activity-tracker-cli-plugin?topic=activity-tracker-cli-plugin-activity-tracker-cli-overview
     console-page: /observe/activitytracker
     product-page: https://www.ibm.com/cloud/activity-tracker
     path: activity-tracker-cli-plugin
-    label: IBM Cloud Activity Tracker CLI
+    label: IBM Cloud Activity Tracker hosted event search CLI
 
   entries: 
   - navgroup: 
       id: reference
       topics: 
-      - activity-tracker-cli-overview.md
-      - activity-tracker-cli.md
-      - atracker-cli-v1.md
-      - atracker-cli-v2.md
+      - topic: activity-tracker-cli-overview.md
+        navtitle: Overview
+      - topic: activity-tracker-cli.md
+        navtitle: CLI reference
