--- a/toc.yaml
+++ b/toc.yaml
@@ -8,6 +8,7 @@ toc:
     product-page: https://www.ibm.com/cloud/activity-tracker
     path: activity-tracker-cli-plugin
     label: IBM Cloud Activity Tracker hosted event search CLI
+    release-level: deprecated
 
   entries: 
   - navgroup: 
